# clSpMV_MIC

./: CL  Makefile  Makefile_mac  Makefile_mic  Makefile_notemplate  NOTES  README  README.md  README_cas014_msi  base.conf  benchmarks.txt  create.py  err  kd_tree_gflop_with_size.tar  launch_queue.sh  m.py  main.cpp  make_binary_to_ascii  make_rcm  mem_bandwidth.py  mem_bandwidth_host.py  o  run.sh  run1.sh  run_benchmarks.py  run_benchmarks_3d.py  run_benchmarks_3d_multi_files.py  run_benchmarks_mic_3d.py  run_host.sh  run_mic.sh  runlog.txt  setupenv.sh  test.conf
ViennaCL-1.4.2/: CMakeLists.txt  README  launch_cmake.x
ViennaCL-1.4.2/cmake/: FindOpenCL.cmake  compilers.cmake
ViennaCL-1.4.2/ge_timings/: timings_nod1e6_sten10  timings_nod1e6_sten32
ViennaCL-1.4.2/tests/: CMakeLists.txt
bandwidth_erik_saule/: bandwidth.cpp  makefile  makefile.in  run.sh  run_mic.sh  timestamp.hpp
bandwidth_erik_saule/results/: README  memcpy-61-4  memset-61-4  memset-nrngo-61-4  vectsum-61-4
bandwidth_erik_saule/results1/: vectsum-1-4  vectsum-16-1  vectsum-16-2  vectsum-2-1  vectsum-32-1  vectsum-32-3  vectsum-4-1  vectsum-4-2  vectsum-4-3  vectsum-4-4  vectsum-61-2  vectsum-61-4  vectsum-8-2  vectsum-8-4
bandwidth_erik_saule/results2/: README  memcpy-61-1  memcpy-61-3  memcpy-61-4  memset-61-1  memset-61-3  memset-61-4  memset-nr-61-3  memset-nr-61-4  memset-nrngo-61-4  simplesum-char-61-1  simplesum-char-61-2  simplesum-char-61-4  simplesum-int-61-4  vectsum-1-1  vectsum-1-3  vectsum-16-2  vectsum-16-3  vectsum-16-4  vectsum-2-1  vectsum-2-2  vectsum-2-4  vectsum-32-2  vectsum-32-3  vectsum-32-4  vectsum-4-1  vectsum-4-2  vectsum-61-2  vectsum-61-3  vectsum-61-4  vectsum-8-1  vectsum-8-4  vectsum-pref-61-4
benchmark/: bdia.ben  overhead.ben
benchmarks_hpc15-35/: gordonxxx.out  omp.cpp  run_benchmarks_mic_3d.py  test.conf
benchmarks_hpc15-35/speed1700Gflops/: gordonxxx.out
cascade_benchmarks/: ell_kd-tree_rcm_sym_1_x_weights_direct__no_hv_stsize_32_3d_128x_128y_128z.bmtx_cas014_compact_guided,64  ell_kd-tree_rcm_sym_1_x_weights_direct__no_hv_stsize_32_3d_96x_96y_96z.bmtx_cas014_compact_dynamic,64  ell_kd-tree_rcm_sym_1_x_weights_direct__no_hv_stsize_32_3d_96x_96y_96z.bmtx_cas014_compact_guided,64  ell_kd-tree_x_weights_direct__no_hv_stsize_32_3d_128x_128y_128z.bmtx_cas014_compact_guided,64  ell_kd-tree_x_weights_direct__no_hv_stsize_32_3d_64x_64y_64z.bmtx_cas014_compact_dynamic,64  ell_kd-tree_x_weights_direct__no_hv_stsize_32_3d_64x_64y_64z.bmtx_cas014_compact_guided,64
computer_info/: proc_meminfo_frodo
computer_info/cascade/: cas014_mem_info_april_2014.txt  (+8 more)
frodo_benchmarks/: bandwidth_benchmarks.txt  benchmarks.txt  ell_kd-tree_rcm_sym_1_x_weights_direct__no_hv_stsize_32_3d_96x_96y_96z.bmtx_S3_compact_dynamic,64  ell_kd-tree_rcm_sym_1_x_weights_direct__no_hv_stsize_32_3d_96x_96y_96z.bmtx_S3_compact_guided,64  ell_kd-tree_x_weights_direct__no_hv_stsize_32_3d_128x_128y_128z.bmtx_S3_compact_guided,64  ell_kd-tree_x_weights_direct__no_hv_stsize_32_3d_64x_64y_64z.bmtx_S3_compact_guided,64
host_cascade/: CMakeLists.txt
host_frodo/: CMakeLists.txt
host_mem_cascade/: CMakeLists.txt
host_mem_frodo/: CMakeLists.txt
include/: constant.h  matrix_storage.h
include_template/: Makefile  bandwidth_tests.h  bandwidth_tests_host.h  cl_base_class.h  class_base.h  class_bell.h  class_ell.h  class_sbell.h  class_sell.h  constant.h  ell_openmp.h  ell_openmp_host.h  fileio.h  matrix_storage.h  oclcommon.h  openmp_base.h  print_utils.h  projectsettings.h  rbffd_io.h  rbffd_io.hpp  rcm.h  reorder.h  runs.h  spmv_serial.h  super_buffer.h  timer_eb.h  timer_ge.h  util.h  vcl_bandwidth_reduction.h
kernels/: spmv_bell.cl  spmv_bell_d.cl  spmv_ell.cl  spmv_ell_d.cl  spmv_sbell.cl  spmv_sbell_d.cl  spmv_sell.cl  spmv_sell_d.cl
march31_2014_bandwidth_host_tests_S3_run3/: bench=read_col=compact_rows=00_host.out  bench=read_cpp_col=compact_rows=00_host.out  bench=read_write_col=compact_rows=00_host.out  bench=read_write_cpp_col=compact_rows=00_host.out  bench=write_col=compact_rows=00_host.out  bench=write_cpp_col=compact_rows=00_host.out
march31_2014_bandwidth_host_tests_cas014_run4/: bench=read_col=compact_rows=00_host.out  bench=read_cpp_col=compact_rows=00_host.out  bench=read_write_col=compact_rows=00_host.out  bench=read_write_cpp_col=compact_rows=00_host.out  bench=write_col=compact_rows=00_host.out  bench=write_cpp_col=compact_rows=00_host.out
mic_frodo/: CMakeLists.txt
mic_hpc-15-35/: CMakeLists.txt
mic_mem_hpc-15-35/: CMakeLists.txt
spmv_openmp/: NOTES  Padded2DArray.hpp  README  graph.hpp  graph_impl.hpp  graphshuffler.hpp  main-spmm.hpp  main-spmv.hpp  makefile  makefile.in  memutils.hpp  mmio.h  omp-spmm-vect.cpp  omp-spmm.cpp  omp-spmv-vect-bcsr.cpp  omp-spmv.cpp  seq-spmm.cpp  seq-spmv.cpp  ulib.c  ulib.h
src/: bench_bdia.cpp  bench_dia.cpp  bench_ell.cpp  bench_overhead.cpp  oclcommon.cpp  spmv_all.cpp  spmv_bell.cpp  spmv_cocktail.cpp
src_template/: aa  bandwidth_tests.cpp  bandwidth_tests_host.cpp  bench_bell.cpp  bench_coo.cpp  bench_csr.cpp  bench_sell.cpp  binary_to_ascii.cpp  burkardt_rcm.cpp  cl_base_class.cpp  fileio.cpp  mem_bandwidth.cpp  method_0.cpp  oclcommon.cpp  rcm.cpp  runs.cpp  spmv_all.cpp  spmv_bell.cpp  spmv_ell.cpp  spmv_ell_openmp.cpp  spmv_ell_openmp_host.cpp  timer_eb.cpp  timer_ge.cpp  util.cpp
test_vector_routines/: Makefile_mic  zmmintrin.h
(+129 files in other folders)
